responsivite added spacing need to be fix

--- a/src/assets/styles/_bases.scss
+++ b/src/assets/styles/_bases.scss
@@ -9,7 +9,13 @@ html {
 }
 
 body {
+  width: 100%;
+  min-height: 100vh;
   font-size: 1.6rem;
+  font-style: normal;
+  color: #ffffff;
+  font-family: var(--montserrat-font);
+  background-color: var(--bg-color);
 }
 
 ul {
