--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -2,3 +2,317 @@
 @import "media-queries";
 @import "bases";
 @import "classes";
+
+/*=============== Main Container ===============*/
+.main__container {
+  overflow: hidden;
+  width: 100%;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 2fr auto;
+  padding: 4.6rem 4.406rem 2.4rem 7.7rem;
+
+  @include sm {
+    padding: 1.9rem 1.275rem 2.4rem 1.2rem;
+  }
+}
+
+/*=============== Header ===============*/
+.header {
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .nav__logo {
+      padding: 0.8rem;
+      font-family: var(--crimson-pro-front);
+      font-size: 1.4rem;
+      font-weight: 200;
+      line-height: 1.6rem;
+      text-transform: uppercase;
+      border: 0.1rem solid #fff;
+    }
+
+    .nav__menu {
+      .nav__list {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 8.6rem;
+
+        .nav__items {
+          .nav__link {
+            position: relative;
+            font-size: 1.8rem;
+            font-weight: 700;
+            line-height: 2.2rem;
+            font-family: var(--montserrat-font);
+            transition: 0.4s;
+
+            &::after {
+              content: "";
+              position: absolute;
+              bottom: -0.8rem;
+              left: -0.1rem;
+              width: 0;
+              transition: 0.2s;
+            }
+
+            &:hover::after {
+              content: "";
+              width: 100%;
+              border: 0.2rem solid #fff;
+            }
+          }
+
+          .nav__link--active {
+            &::after {
+              content: "";
+              width: 100%;
+              border: 0.2rem solid #fff;
+            }
+          }
+        }
+
+        @include md {
+          gap: 5.6rem;
+        }
+      }
+
+      .nav__close {
+        display: none;
+      }
+
+      @include sm {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 100%;
+        height: 100%;
+        padding: 25.8rem 14.1rem 33.4rem 14.2rem;
+        background: var(--bg-color);
+        z-index: 100;
+        transition: 0.4s;
+
+        .nav__list {
+          flex-direction: column;
+          gap: 3.2rem;
+        }
+
+        .nav__close {
+          display: inline;
+          position: absolute;
+          top: 2.192rem;
+          right: 1.992rem;
+          font-size: 3.8rem;
+          cursor: pointer;
+        }
+      }
+    }
+
+    /* Show menu */
+
+    .show-menu {
+      right: 0;
+    }
+
+    .nav__toggle {
+      display: none;
+      font-size: 3.8rem;
+      cursor: pointer;
+
+      @include sm {
+        display: inline-block;
+      }
+    }
+  }
+}
+
+/*=============== Main ===============*/
+.main {
+  margin-top: 14.5rem;
+  display: grid;
+  grid-template-columns: 42rem 82.111rem;
+  column-gap: 8.6rem;
+
+  .main__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    h1 {
+      margin-bottom: 4rem;
+      font-size: 4.8rem;
+      font-weight: 500;
+      line-height: 6.1rem;
+      font-family: var(--lora-font);
+    }
+
+    p {
+      font-size: 2.4rem;
+      font-weight: 400;
+      line-height: 2.9rem;
+      margin-bottom: 4.8rem;
+    }
+
+    a {
+      font-size: 1.8rem;
+      font-weight: 700;
+      line-height: 2.2rem;
+
+      i {
+        font-size: 1.6rem;
+        margin-left: 1rem;
+      }
+    }
+  }
+
+  .main__services {
+    position: relative;
+    padding: 2.4rem 3.294rem 0.819rem 5.2rem;
+
+    .main__service-img {
+      width: 73.5rem;
+    }
+
+    .main__service {
+      position: absolute;
+      bottom: -11rem;
+      right: 6.4rem;
+      width: 41rem;
+      padding: 2.3rem 5.7rem 3.4rem 2.6rem;
+      background: #181719;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+      .main__service-header {
+        margin-bottom: 3rem;
+        display: flex;
+        align-items: center;
+
+        img {
+          width: 5rem;
+          height: 5rem;
+          border-radius: 50%;
+          margin-right: 2rem;
+        }
+
+        .main__service-header-info {
+          font-weight: 500;
+          h2 {
+            font-size: 1.4rem;
+            line-height: 1.7rem;
+            margin-bottom: 0.5rem;
+          }
+
+          span {
+            font-size: 1.2rem;
+            line-height: 1.5rem;
+            color: #828282;
+          }
+        }
+      }
+
+      .main__service-content {
+        p {
+          font-size: 2.4rem;
+          font-weight: 700;
+          line-height: 3.1rem;
+          font-family: var(--lora-font);
+        }
+      }
+    }
+  }
+
+  @include sm {
+    margin-top: 3.8rem;
+    grid-template-columns: 1fr;
+    row-gap: 2.6rem;
+
+    .main__content {
+      h1 {
+        font-size: 3.6rem;
+        line-height: 4.6rem;
+        margin-bottom: 2.5rem;
+      }
+
+      p {
+        width: 25rem;
+        font-size: 1.4rem;
+        line-height: 1.7rem;
+        margin-bottom: 2.5rem;
+      }
+
+      a {
+        font-size: 1.4rem;
+        line-height: 1.7rem;
+      }
+    }
+
+    .main__services {
+      width: 100%;
+      padding: 0;
+
+      .main__service-img {
+        width: 100%;
+      }
+
+      .main__service {
+        width: 30rem;
+        right: 1.5rem;
+        padding: 1.3rem 5.7rem 2.4rem 2.6rem;
+
+        .main__service-header {
+          img {
+            width: 3.659rem;
+            height: 3.659rem;
+          }
+
+          .main__service-header-info {
+            h2 {
+              font-size: 1.2rem;
+              line-height: 1.5rem;
+              margin-bottom: 0.3rem;
+            }
+
+            span {
+              font-size: 1rem;
+              line-height: 1.2rem;
+            }
+          }
+        }
+
+        .main__service-content {
+          p {
+            font-size: 1.8rem;
+            line-height: 2.3rem;
+          }
+        }
+      }
+    }
+  }
+
+  @include md {
+  }
+}
+
+/*=============== Footer ===============*/
+footer {
+  margin-top: 20.8rem;
+  text-align: center;
+  color: #bdbdbd;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.7rem;
+  font-family: var(--montserrat-font);
+
+  p {
+    a {
+      color: inherit;
+    }
+  }
+
+  @include sm {
+    margin-top: 19rem;
+  }
+}
